# xray-client

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_CN.md  build-executable.sh  build-offline.sh  docker-entrypoint.sh  install.sh  pyproject.toml  quick-install.sh  tui.py  web-ui.py  xray-client-update.service  xray-client-update.timer  xray-client.py
.github/workflows/: ci.yml  release.yml
